--- a/franck_exo/app/templates/index.html
+++ b/franck_exo/app/templates/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>peaks locations!</h1>
+    <button style='margin-left: 80%; margin-bottom: 20px;'><a href = "http://127.0.0.1:5000/mapView">Map View</a></button>
     <table id="myTable" style="width:100%">
     </table>
     <div style= "display: flex; justify-content: space-between; max-width: 80%; margin: 0 auto; padding: 10px 0;">
